replaced all uses of new Boolean(true) with Boolean.TRUE and all uses of new Boolean(variable) with Boolean.valueOf(variable) since it's wasteful to allocate instances of type Boolean in addition to the static members on that class.